<resources>
    <string name="app_name" translatable="false">Deplastic</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="hello_blank_fragment">calendar hehe</string>
    <string name="config">Error?</string>
    <string name="calendar">CALENDAR!</string>
    <string name="map">espero que aqui vagi un mapa algun dia</string>
    <string name="menu_home">Home</string>
    <string name="menu_map">Map</string>
    <string name="menu_cal">Events</string>
    <string name="menu_config">Configuration</string>
    <string name="action_settings">Settings</string>
    <string name="nav_header_desc">Navigation Header</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="hint_usr">E-mail</string>
    <string name="hint_pass">Password</string>
    <string name="button">Button</string>
    <string name="exitbutton">exit</string>
    <string name="UserIconDesc">UserIconDesc</string>
    <string name="Username">Username</string>
    <string name="get_points_via_qr">Get Points via QR</string>
    <string name="get_points_via_code">Get Points via Code</string>
    <string name="ProfilePicChangeButtonText">ProfilePicChangeButtonText</string>
    <string name="UsernameChangeButtonText">UsernameChangeButtonText</string>
    <string name="PasswordChangeButtonText">PasswordChangeButtonText</string>
    <string name="ClientStatusChangeButtonText">ClientStatusChangeButtonText</string>
    <string name="AddButtonText">AddButtonText</string>
    <string name="BalanceButtonText">BalanceButtonText</string>
    <string name="SettingsButtonText">SettingsButtonText</string>
    <string name="LogoutButtonText">LogoutButtonText</string>
    <string name="Loginbutton">Log In</string>
    <string name="RegisterButton">Register</string>
    <string name="regUsername">Username</string>
    <string name="EULA">End User Agreement</string>
    <string name="deplasticlogo">DeplasticLogo</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="userRadioButton">User</string>
    <string name="artistRaddioButton">Artist</string>
    <string name="eulaAlert">EULA</string>
    <string name="EULAcontents">lorem ipsum</string>
    <string name="menu_config_balance" translatable="false">config_balance</string>
    <string name="menu_tenda">Shop</string>
    <string name="Balance" translatable="false">Balance</string>
    <string name="ProdName">Default</string>
    <string name="ProdDescription">Description default</string>
    <string name="Cost">DefaultPointCost</string>
    <string name="BUY">Buy</string>
</resources>